# exercicios

exercicios/: estatisticaInferencial.ipynb  pymongoConexao.ipynb  sqlite3Conexao.py  tensorflowIntro.ipynb  webScraping.ipynb
exercicios/cnn-cursoDSA/: pyproject.toml
exercicios/cnn-cursoDSA/notebooks/: modelandoCNN.ipynb  modelando_CNN.ipynb  testes_tensorflor.ipynb
exercicios/faculdade/: classificacao_iris_com_mlp.ipynb  databases_web_scraping.ipynb  estatistica_inferencial.ipynb  navie_bayes.ipynb  testes_pymongo.ipynb
exercicios/java/: FindLargestNumberInAnArray.java  fibonacci.java  methodOverload.java  sortArray.java  userConstructor.java
exercicios/pandera-DSE/: check_output.py  schema.yml  to_yaml.py
exercicios/pandera-DSEscalavel/: check_input.py  check_io.py  class_schema.py  from_yaml.py
ifsp/matematica/fatoracaoLU/: decomposicaoLU.sci
pis/pi1/: README.md  conexao.php  index.php
pis/pi1/bd/: criar_banco.sql  criar_tabela.sql
pis/pi1/css/: site.css
pis/pi2/: conexao.php  index.php
pis/pi2/bd/: tabela.sql
pis/pi2/css/: style.css
pis/pi2/js/: scripts.js
