[tool.poetry]
name = "cursoda"
version = "0.1.0"
description = ""
authors = ["João Vitor <joaovitorsouza205@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.2"
numpy = "^1.22.4"
notebook = "^6.4.11"
tensorflow = "^2.9.1"
sklearn = "^0.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
